[gd_scene load_steps=4 format=3 uid="uid://c41qjcmonour1"]

[ext_resource type="Script" path="res://house_yaga_space/content/ui/options.gd" id="1_7gn41"]
[ext_resource type="Theme" uid="uid://qe2wkjg65iy6" path="res://house_yaga_space/resource/ui/theme_pause.tres" id="2_jbiux"]
[ext_resource type="AudioStream" uid="uid://4ptrf1tm6eb1" path="res://house_yaga_space/resource/audio/SFX/shot2.wav" id="3_tcyds"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7gn41")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -198.0
offset_right = 254.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jbiux")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 25.0
offset_right = -64.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ЗВУК"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Общий:"
horizontal_alignment = 2

[node name="HSliderMain" type="HSlider" parent="Panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Label2" type="Label" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Музыка:"
horizontal_alignment = 2

[node name="HSliderMusic" type="HSlider" parent="Panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Label3" type="Label" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Эффекты:"
horizontal_alignment = 2

[node name="HSliderSFX" type="HSlider" parent="Panel/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonBack" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Вернуться"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tcyds")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/GridContainer/HSliderMain" to="." method="_on_h_slider_main_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/GridContainer/HSliderMusic" to="." method="_on_h_slider_music_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/GridContainer/HSliderSFX" to="." method="_on_h_slider_sfx_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
